update NekoFX/README.md.